[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui_classes/WindowDialog.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/Bold.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.27451 )

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0, 0.0392157, 0.113725, 1 )
border_width_top = 5
border_width_bottom = 5
border_color = Color( 0.32549, 0.67451, 1, 1 )
corner_radius_top_left = 20
corner_radius_bottom_right = 20
corner_detail = 1
shadow_color = Color( 0, 0.666667, 1, 0.0509804 )
shadow_size = 70
shadow_offset = Vector2( 0, 20 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
draw_center = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.192157, 0.192157, 1 )
corner_radius_top_left = 10
corner_detail = 1
shadow_color = Color( 1, 0, 0, 0.6 )
shadow_size = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.556863, 0, 0.00784314, 0.580392 )
corner_radius_top_left = 10
corner_detail = 1
shadow_color = Color( 1, 0, 0, 0.6 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 5.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false
corner_radius_top_left = 10
corner_detail = 1
shadow_color = Color( 0, 0.345098, 1, 0.6 )
shadow_size = 10
shadow_offset = Vector2( -5, 0 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 40.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.32549, 0.67451, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 10
corner_detail = 1
shadow_color = Color( 0.101961, 0.6, 0.909804, 0.211765 )
shadow_size = 25
shadow_offset = Vector2( 0, 5 )

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 8
custom_styles/panel = SubResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="WindowDialog" type="WindowDialog" parent="."]
unique_name_in_owner = true
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -278.0
margin_top = -170.0
margin_right = 278.0
margin_bottom = 188.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
popup_exclusive = true
resizable = true

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = 20.0
margin_right = -17.0
margin_bottom = -20.0

[node name="ScrollContainer" type="ScrollContainer" parent="WindowDialog/VBoxContainer"]
margin_right = 522.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Body" type="PanelContainer" parent="WindowDialog/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 522.0
margin_bottom = 277.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 7 )

[node name="FooterButtons" type="HBoxContainer" parent="WindowDialog/VBoxContainer"]
unique_name_in_owner = true
margin_top = 285.0
margin_right = 522.0
margin_bottom = 318.0
custom_constants/separation = 50
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="WindowDialog/VBoxContainer/FooterButtons"]
margin_left = 230.0
margin_right = 292.0
margin_bottom = 33.0
size_flags_horizontal = 6
size_flags_vertical = 3
text = "Button"

[node name="CloseButton" type="Button" parent="WindowDialog"]
unique_name_in_owner = true
show_behind_parent = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_top = -30.0
margin_right = -2.0
margin_bottom = 3.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.254902, 0.639216, 1, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "X"

[node name="TitleBar" type="Label" parent="WindowDialog"]
unique_name_in_owner = true
show_behind_parent = true
margin_top = -30.0
margin_right = 229.595
margin_bottom = 30.0
mouse_filter = 1
mouse_default_cursor_shape = 13
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0.0392157, 0.113725, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "INdIE's Chosen Title"
align = 1

[connection signal="resized" from="WindowDialog/VBoxContainer/ScrollContainer" to="." method="_on_ScrollContainer_resized"]
[connection signal="pressed" from="WindowDialog/CloseButton" to="." method="_on_CloseButton_pressed"]
